공양미 충전, 공양미 내역 페이지 퍼블리싱 완료

--- a/src/main/resources/templates/mypage/my-funding-list.html
+++ b/src/main/resources/templates/mypage/my-funding-list.html
@@ -23,12 +23,19 @@
             <div class="mypage-header-container">
                 <div class="mypage-header">
                     <div class="mypage-header-left">
+                        <div class="my-rank">
+                            <img src="https://i.namu.wiki/i/67tjhRLuCX7MYeLY5p94GgXYHP7v1dMQ5M0QP8emeuw3IvlZlQNZBgeKz5qj8P_3ll2AF97RWC_isDEnrT4kgeBMW1GU39jR-Wn92gD-XSt5J1HbKiRxpRt8ZRaq8dvGHUMTt_clauEc9TOx_JyIaQ.webp" alt="">
+                        </div>
                         <div class="mypage-info">
                             <div class="info-name">정현진</div>
                             <div class="info-rice">
                                 <p>내 공양미 : 300석</p>
                             </div>
                         </div>
+                    </div>
+                    <div class="rice-charge-input">
+                        <p>10,000원당 공양미 100석</p>
+                        <input type="text" placeholder="충전 금액을 입력하세요" style="width: 255px;">
                     </div>
                     <div class="rice-charge-wrap">
                         <button class="rice-charge">
@@ -68,6 +75,11 @@
                         <span class="header-menu-element">
                             <div class="header-menu-div">
                                 <a href="" class="header-menu-a-select">펀딩내역</a>
+                            </div>
+                        </span>
+                        <span class="header-menu-element">
+                            <div class="header-menu-div">
+                                <a href="" class="header-menu-a">공양미 내역</a>
                             </div>
                         </span>
                         <span class="header-menu-element">
