--- a/src/main/resources/static/css/mypage/mypage-header.css
+++ b/src/main/resources/static/css/mypage/mypage-header.css
@@ -63,6 +63,23 @@ button {
     display: flex;
 }
 
+.my-rank {
+    position: relative;
+    left: 0px;
+    top: 0px;
+    min-width: 64px;
+    min-height: 64px;
+    width: 80px;
+    height: 80px;
+}
+
+.my-rank img {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 2;
+}
+
 .mypage-info {
     display: flex;
     margin-left: 10px;
@@ -90,6 +107,12 @@ button {
     font-size: 14px;
     line-height: 24px;
     letter-spacing: -0.015em;
+}
+
+.rice-charge-input {
+    position: absolute;
+    right: 215px;
+    top: -12px;
 }
 
 .rice-charge-wrap {
