펀딩 시작페이지, 관리자페이지 커밋

--- a/src/main/resources/static/css/admin/sponsorship-request-modal.css
+++ b/src/main/resources/static/css/admin/sponsorship-request-modal.css
@@ -33,55 +33,65 @@
   margin: 31px 0;
 }
 
-.modal__content {
+.modal__profile__top {
   padding: 30px 20px;
   background-color: white;
   border-radius: 12px;
   box-shadow: 0 4px 14px rgb(48 52 65 / 8%);
   margin-bottom: 21px;
 }
-
-.content__title{
-  display: flex;
-  align-items: center;
-}
-
-.content__title h4 {
+.modal__profile__top h4 {
   color: #363636;
-  width: 12%;
 }
 
-.notice__title{
-  font-size: 18px;
+.modal__profile__bottom {
+  padding: 30px 20px;
+  margin-bottom: 21px;
+  background-color: white;
   border-radius: 12px;
   box-shadow: 0 4px 14px rgb(48 52 65 / 8%);
 }
+.modal__profile__bottom h4 {
+  color: #363636;
+  margin-bottom: 30px;
+}
 
-.notice__content {
+.modal__profile__bottom textarea {
+  width: 90%;
+  border: none;
+  box-shadow: 0 4px 14px rgb(48 52 65 / 8%);
+  resize: none;
+  height: 300px;
+  padding: 30px;
+  font-family: 'NanumBarunGothic';
+  font-size: 14px;
+  outline: none;
+}
+
+.user__profile {
   display: flex;
   font-weight: 600;
-  margin-top: 30px;
   color: #777777;
 }
 
-.date {
-  border-radius: 12px;
-  box-shadow: 0 4px 14px rgb(48 52 65 / 8%);
+.user__profile h5 {
+  width: 12%;
+  margin: 15px 0;
 }
 
-.content__intput {
+.user__profile__input {
   display: flex;
-  flex: 1;
   align-items: center;
-  padding: 10px 1px 2px;
+  padding: 12px 0;
   margin-left: 80px;
   font-size: 16px;
   text-align: left;
   font-weight: 400;
   border: 0;
+  width: 200px;
 }
 
-.content__intput input {
+.user__profile__input input {
   color: #777777;
   width: 100%;
   font-family: inherit;
@@ -89,9 +99,8 @@
   outline: none;
   border: none;
   border-radius: 3px;
-  padding: 12px 12px;
+  padding: 3px 12px ;
 }
-
 .user__profile__input input:focus {
   border: 1px solid #777777;
 }
@@ -100,6 +109,4 @@
   display: flex;
   justify-content: flex-end;
 }
-.note-modal-backdrop{
-  display: none !important;
-}
+
