--- a/src/main/resources/static/css/admin/default.css
+++ b/src/main/resources/static/css/admin/default.css
@@ -100,42 +100,42 @@ section.main {
 /* 버튼 스타일 ============================ */
 
 .button__type_2 {
-  width: 95px;
-  font-weight: 600;
-  text-align: center;
-  line-height: 35px;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  transition: all 0.2s;
-  cursor: pointer;
+    width: 95px;
+    font-weight: 600;
+    text-align: center;
+    line-height: 35px;
+    border: none;
+    border-radius: 5px;
+    transition: all 0.2s;
+    cursor: pointer;
+    box-shadow: 3px 3px 3px rgb(48 52 65 / 10%);
 }
 .button__type_3 {
   width: 95px;
-  font-weight: 600;
-  text-align: center;
-  line-height: 35px;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  transition: all 0.2s;
-  cursor: pointer;
+    font-weight: 600;
+    text-align: center;
+    line-height: 35px;
+    border: none;
+    border-radius: 5px;
+    transition: all 0.2s;
+    cursor: pointer;
+    box-shadow: 3px 3px 3px rgb(48 52 65 / 10%);
 }
 
 .button__color__green {
-  background: #00ae68;
+  background: #fcfcfc;
 }
 
 .button__color__green:hover {
-  background: #21825b;
+  background: #dfdfdf;
 }
 
 .button__color__red {
-  background: #ec3d1e;
+  background: #fcfcfc;
 }
 
 .button__color__red:hover {
-  background: #c0331a;
+  background: #dfdfdf;
 }
 
 .pagenation {
