--- a/src/main/resources/static/css/admin/paging.css
+++ b/src/main/resources/static/css/admin/paging.css
@@ -9,9 +9,9 @@
     padding: 5px 10px;
     margin-right: 5px;
     border-radius: 3px;
-    color: #2ac385;
+    color: #e0e0e0;
     background-color: #fff;
-    border: 1px solid #2ac385;
+    border: 1px solid #e0e0e0;
     font-family: inherit;
     transition: background-color 0.2s ease-in-out;
 }
@@ -21,22 +21,22 @@
 }
 
 .paging a:hover {
-    background-color: #2ac385;
-    color: #fff;
+    background-color: #e0e0e0;
+    color: rgb(0, 0, 0);
     text-decoration: none;
-    border-color: #2ac385;
+    border-color: #e0e0e0;
 }
 .paging a:hover code {
-    color: #fff;
+    color: rgb(0, 0, 0);
 }
 
 .paging #currentPage {
-    color: #fff;
-    background-color: #2ac385;
+    color: rgb(3, 3, 3);
+    background-color: #dfdfdf;
     display: inline-block;
     padding: 5px 10px;
     margin-right: 5px;
     border-radius: 3px;
-    border: 1px solid #2ac385;
+    border: 1px solid #e0e0e0;
     font-family: inherit;
 }
