--- a/src/main/resources/templates/admin/inquiry.html
+++ b/src/main/resources/templates/admin/inquiry.html
@@ -291,6 +291,10 @@
                 <h4>테스트 문의 제목</h4>
                 <textarea cols="30" rows="10" readonly="true">테스트 문의 내용</textarea>
               </div>
+              <div class="modal__profile__bottom">
+                <h4>답변 작성</h4>
+                <textarea cols="20" rows="10" placeholder="답변 내용 작성"></textarea>
+              </div>
               <div class="user__profile__button">
                 <button id="completeBtn" class="button__type_2 button__color__green">
                   답변완료
