--- a/src/main/resources/templates/admin/modals/inquiry-modal.html
+++ b/src/main/resources/templates/admin/modals/inquiry-modal.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/static/css/admin/default.css" />
-    <link rel="stylesheet" href="/static/css/admin/enquiry-modal.css" />
+    <link rel="stylesheet" href="/static/css/admin/inquiry-modal.css" />
     <title></title>
   </head>
   <body>
@@ -15,38 +15,51 @@
       <div class="modal__header">
         <h3 class="modal__title">문의 상세보기</h3>
         <a class="modal-close">
-          <svg xmlns="http://www.w3.org/2000/svg" data-name="Capa 1" id="Capa_1" viewBox="0 0 20 19.84">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            data-name="Capa 1"
+            id="Capa_1"
+            viewBox="0 0 20 19.84">
             <path
               d="M10.17,10l3.89-3.89a.37.37,0,1,0-.53-.53L9.64,9.43,5.75,5.54a.37.37,0,1,0-.53.53L9.11,10,5.22,13.85a.37.37,0,0,0,0,.53.34.34,0,0,0,.26.11.36.36,0,0,0,.27-.11l3.89-3.89,3.89,3.89a.34.34,0,0,0,.26.11.35.35,0,0,0,.27-.11.37.37,0,0,0,0-.53Z" />
           </svg>
         </a>
       </div>
-      <form class="storage_form" action="">
+      <form action="">
         <main class="modal__main">
           <div class="modal__profile__top">
             <h4>회원정보</h4>
             <div class="user__profile">
               <h5>아이디</h5>
               <div class="user__profile__input">
-                <input type="text" name="" value="example1234" readonly="true"/>
+                <input type="text" name="" value="example1234" readonly="true" />
               </div>
             </div>
             <div class="user__profile">
               <h5>이메일</h5>
               <div class="user__profile__input">
-                <input type="text" name="" value="example@gmail.com" readonly="true"/>
+                <input type="text" name="" value="example@gmail.com" readonly="true" />
               </div>
             </div>
             <div class="user__profile">
               <h5>전화번호</h5>
               <div class="user__profile__input">
-                <input type="text" name="" value="01012341234" readonly="true"/>
+                <input type="text" name="" value="01012341234" readonly="true" />
               </div>
             </div>
           </div>
           <div class="modal__profile__bottom">
             <h4>테스트 문의 제목</h4>
-            <textarea cols="30" rows="10"></textarea>
+            <textarea cols="30" rows="10" readonly="true">테스트 문의 내용</textarea>
+          </div>
+          <div class="modal__profile__bottom">
+            <h4>답변 작성</h4>
+            <textarea cols="20" rows="10">테스트 문의 내용</textarea>
+          </div>
+          <div class="user__profile__button">
+            <button id="completeBtn" class="button__type_2 button__color__green">
+              답변완료
+            </button>
           </div>
         </main>
       </form>
