--- a/src/main/resources/static/css/customerCenter/notice.css
+++ b/src/main/resources/static/css/customerCenter/notice.css
@@ -19,7 +19,7 @@ li {
 }
 
 .notice-wrap {
-    border-bottom: 1px solid rgb(230, 230, 230);
+    /* border-bottom: 1px solid rgb(230, 230, 230); */
     position: relative;
 }
 
