공지사항 상세페이지 완성

--- a/src/main/resources/templates/customerCetner/notice-detail.html
+++ b/src/main/resources/templates/customerCetner/notice-detail.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/static/css/font/font.css">
     <link rel="stylesheet" href="/static/css/customerCenter/notice-detail.css">
     <link rel="stylesheet" href="../../static/css/customerCenter/notice.css">
-
+    <link rel="stylesheet" href="/static/css/customerCenter/notice-detail-response.css">
     
 </head>
 <body>
@@ -46,20 +46,21 @@
                     <p class="">텀블벅 커뮤니티팀 드림</p>
                 </div>
             </div>
+            <ul class="notice-detail-next-container">
+                <li>
+                    <b>이전글</b>
+                    <button type="button" value="">
+                        [서비스 개편] Premium 요금제 혜택 추가 및 요금제 심사 안내 (2023.4.12 시행)</button>
+                </li>
+                <li>
+                    <b>다음글</b>
+                    <button type="button" value="">
+                        [텀블벅] 2023.4.10(월) KT 유/무선 인터넷 환경 이미지 로딩 지연 발생 안내 (해결 완료)</button>
+                </li>
+            </ul>
         </div>
 
-        <ul class="notice-detail-next-container">
-            <li>
-                <b>이전글</b>
-                <button type="button" value="">
-                    [서비스 개편] Premium 요금제 혜택 추가 및 요금제 심사 안내 (2023.4.12 시행)</button>
-            </li>
-            <li>
-                <b>다음글</b>
-                <button type="button" value="">
-                    [텀블벅] 2023.4.10(월) KT 유/무선 인터넷 환경 이미지 로딩 지연 발생 안내 (해결 완료)</button>
-            </li>
-        </ul>
+
     
         <div class="notice-detail-btn-wrap">
             <button class="notice-detail-btn">목록으로 돌아가기</button>
