--- a/src/main/resources/static/css/customerCenter/notice-detail.css
+++ b/src/main/resources/static/css/customerCenter/notice-detail.css
@@ -1,44 +1,13 @@
-@media only screen and (min-width: 1200px) {
-    .notice-detail-container {
-        max-width: 1160px;
-    }
-}
-
-@media only screen and (min-width: 1080px) {
-.notice-detail-container {
-        max-width: 1080px;
-        margin: 0px auto;
-    }
-}
 
 .notice-detail-container {
     width: 100%;
 }
 
 
-@media only screen and (min-width: 1080px) {
-    .notice-detail-wrapper {
-        padding: 40px 40px 88px;
-        border-radius: 4px;
-        border: 1px solid rgb(230, 230, 230);
-    }
-}
-
-@media only screen and (min-width: 1080px) {
-    .notice-detail-wrapper header {
-        padding: 0px 0px 16px;
-    }
-}
-
 .notice-detail-wrapper header {
     border-bottom: 1px solid rgb(230, 230, 230);
 }
 
-@media only screen and (min-width: 1080px) {
-    .notice-detail-wrapper .notice-detail-content {
-        padding: 48px 44px 0px;
-    }
-}
 
 .notice-detail-wrapper .notice-detail-content {
     font-size: 16px;
@@ -64,21 +33,10 @@
     margin: 0px 0px 32px;
 }
 
-@media only screen and (min-width: 1080px) {
-    .notice-detail-next-container {
-        margin: 0px 0px 40px;
-    }
-}
-
-@media only screen and (min-width: 1080px) {
-.notice-detail-next-container li {
-        height: 47px;
-    }
-}
 
 .notice-detail-next-container li {
     display: flex;
-    -webkit-box-align: center;
+    /* -webkit-box-align: center; */
     align-items: center;
     width: 100%;
     height: 44px;
@@ -89,13 +47,6 @@
     border-bottom: 1px solid rgb(230, 230, 230);
 }
 
-@media only screen and (min-width: 1080px) {
-    .notice-detail-next-container li button {
-        font-size: 16px;
-        line-height: 27px;
-        letter-spacing: -0.02em;
-    }
-}
 
 .notice-detail-next-container li button  {
     flex: 1 1 0%;
@@ -112,14 +63,6 @@
     border: 0px;
 }
 
-@media only screen and (min-width: 1080px) {
-    .notice-detail-next-container li b {
-    font-size: 16px;
-    line-height: 27px;
-    letter-spacing: -0.02em;
-    margin-right: 24px;
-    }
-}
 
 .notice-detail-next-container li b {
     display: inline-block;
@@ -138,12 +81,7 @@
     justify-content: center;
 }
 
-@media only screen and (min-width: 1080px) {
-    .notice-detail-btn  {
-        width: 199px;
-        height: 52px;
-    }
-}
+
 
 .notice-detail-btn {
     cursor: pointer;
