--- a/src/main/resources/static/css/funding/funding-start.css
+++ b/src/main/resources/static/css/funding/funding-start.css
@@ -1,3 +1,20 @@
+
+html {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+html {
+    font-family: sans-serif;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+html {
+    font-size: 14px;
+}
+html {
+    font-family: sans-serif;
+    font-size: 12.5px;
+}
 *, *:before, *:after {
     -webkit-box-sizing: inherit;
     box-sizing: inherit;
