마이페이지 수정, faq 작성

--- a/src/main/resources/static/css/mypage/my-review.css
+++ b/src/main/resources/static/css/mypage/my-review.css
@@ -1,6 +1,6 @@
 .my-review-wrap {
-    max-width: 1160px;
-    margin: 0 auto;
+    max-width: 850px;
+    margin-left: 103px;
 }
 
 .my-review-count-wrap {
