--- a/src/main/resources/static/css/mypage/my-question.css
+++ b/src/main/resources/static/css/mypage/my-question.css
@@ -39,7 +39,6 @@
     box-shadow: rgba(0, 0, 0, 0.2) 0px 11px 15px -7px, rgba(0, 0, 0, 0.14) 0px 24px 38px 3px, rgba(0, 0, 0, 0.12) 0px 9px 46px 8px;
     margin: 32px;
     position: relative;
-    overflow-y: auto;
     display: flex;
     flex-direction: column;
     max-height: calc(100% - 64px);
@@ -210,4 +209,100 @@
     display: inline-block;
     font-size: 16px;
     font-weight: 500;
+}
+
+.show-answer {
+    margin-left: 5px;
+
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
+    border-radius: 1px;
+    border: 1px solid;
+    font-weight: normal;
+    box-sizing: border-box;
+    background-color: rgb(255, 255, 255);
+    color: rgb(255, 87, 87);
+
+    padding: 0px 16px 0px 12px !important;
+
+    display: inline-flex;
+    min-width: 104px;
+    width: 104px;
+    height: 36px;
+    font-size: 16px !important;
+
+    line-height: 27px;
+    letter-spacing: -0.020em;
+    outline: 0;
+}
+
+
+.show-answer-wrap {
+    background-color: #e0e0e0;
+    width: 100%;
+    padding: 16px 0px 16px 52px;
+    display: none;
+}
+
+.modal-wrap {
+    position: absolute;
+    width: auto;
+    z-index: 9999;
+    left: 0px;
+    top: 0px;
+    display: none;
+}
+
+.modal-container {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(13, 13, 13, 0.65);
+}
+
+.modal {
+    max-width: 60%;
+    min-width: 328px;
+    position: absolute;
+    background: rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 2px 16px 0px;
+    border-radius: 4px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+}
+
+.modal-content {
+    color: rgb(13, 13, 13);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    font-size: 16px;
+    line-height: 27px;
+    letter-spacing: -0.020em;
+}
+
+.modal-ok-div {
+    border-top: 1px solid rgb(230, 230, 230);
+    display: flex;
+    justify-content: center;
+}
+
+.modal-ok {
+    flex-grow: 1;
+    border: 0px;
+    background: rgb(255, 255, 255);
+    font-weight: bold;
+    padding-top: 15px;
+    padding-bottom: 17px;
+    font-size: 16px;
+    line-height: 27px;
+    letter-spacing: -0.020em;
+    color: rgb(255, 87, 87);
+    cursor: pointer;
 }
