--- a/src/main/resources/templates/mypage/my-question.html
+++ b/src/main/resources/templates/mypage/my-question.html
@@ -33,10 +33,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="rice-charge-input">
-                        <p>10,000원당 공양미 100석</p>
-                        <input type="text" placeholder="충전 금액을 입력하세요" style="width: 255px;">
-                    </div>
                     <div class="rice-charge-wrap">
                         <button class="rice-charge">
                             <div class="rice-charge-text">공양미 충전</div>
@@ -95,72 +91,101 @@
         <div class="content-wrap">
             <div class="support-request-wrap">
                 <div class="support-request-inner-wrap">
-                    <div class="support-request-one-wrap">
-                        <div class="support-request">
-                            <div class="support-request-place">
-                                <div class="support-request-title-wrap">
-                                    <div class="support-request-title">높이 올라가</div>
+                    <div>
+                        <div class="support-request-one-wrap">
+                            <div class="support-request">
+                                <div class="support-request-place">
+                                    <div class="support-request-title-wrap">
+                                        <div class="support-request-title">높이 올라가</div>
+                                    </div>
+                                    <div class="support-request-content">세상을 다 가져봐</div>
+                                    <div class="support-request-reply">공양미 100석 후원</div>
                                 </div>
-                                <div class="support-request-content">세상을 다 가져봐</div>
-                                <div class="support-request-reply">공양미 100석 후원</div>
-                            </div>
-                            <div class="support-request-detail">
-                                <button class="go-support-request">
-                                    <span class="request-detail">
-                                        <div class="detail-text">상세보기</div>
-                                    </span>
-                                </button>
+                                <div class="support-request-detail">
+                                    <button class="go-support-request">
+                                        <span class="request-detail">
+                                            <div class="detail-text">상세보기</div>
+                                        </span>
+                                    </button>
+                                    <button class="show-answer">
+                                        <span class="request-detail">
+                                            <div class="detail-text">답변확인</div>
+                                        </span>
+                                    </button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="support-request-one-wrap">
-                        <div class="support-request">
-                            <div class="support-request-place">
-                                <div class="support-request-title-wrap">
-                                    <div class="support-request-title">높이 올라가</div>
-                                </div>
-                                <div class="support-request-content">세상을 다 가져봐</div>
-                                <div class="support-request-reply">공양미 100석 후원</div>
+                        <div class="show-answer-wrap">
+                            <div class="support-request-title-wrap">
+                                <div class="support-request-title">보아뱀 닮아버린</div>
                             </div>
-                            <div class="support-request-detail">
-                                <button class="go-support-request">
-                                    <span class="request-detail">
-                                        <div class="detail-text">상세보기</div>
-                                    </span>
-                                </button>
-                            </div>
+                            <div class="support-request-content">반 페르시 부합해 루시퍼 베드신 발포해 리스폰 페스시아 완패를 시켜</div>
+                            <div class="support-request-reply">공양미 100석 후원</div>
                         </div>
                     </div>
-                </div>
-                <div class="page-wrap">
-                    <ul class="page-ul">
-                        <li class="page-arrow">
-                            <div class="arrow">
-                                <svg viewBox="0 0 48 48"><path fill-rule="evenodd" clip-rule="evenodd" d="M32.8912 45.3014L12 23.913L32.8912 2.52471C33.5866 1.8251 34.7804 1.8251 35.4777 2.52471C36.1741 3.22333 36.1741 4.42368 35.4777 5.22224L17.1731 23.913L35.4777 42.7018C36.1741 43.4024 36.1741 44.6018 35.4777 45.4013C35.0788 45.8011 34.6819 46 34.1845 46C33.7855 45.9011 33.2881 45.7002 32.8912 45.3014Z"></path></svg>
+                    <div>
+                        <div class="support-request-one-wrap">
+                            <div class="support-request">
+                                <div class="support-request-place">
+                                    <div class="support-request-title-wrap">
+                                        <div class="support-request-title">높이 올라가</div>
+                                    </div>
+                                    <div class="support-request-content">세상을 다 가져봐</div>
+                                    <div class="support-request-reply">공양미 100석 후원</div>
+                                </div>
+                                <div class="support-request-detail">
+                                    <button class="go-support-request">
+                                        <span class="request-detail">
+                                            <div class="detail-text">상세보기</div>
+                                        </span>
+                                    </button>
+                                    <button class="show-answer">
+                                        <span class="request-detail">
+                                            <div class="detail-text">답변확인</div>
+                                        </span>
+                                    </button>
+                                </div>
                             </div>
-                        </li>
-                        <li class="page-li-select">
-                            <a href="">1</a>
-                        </li>
-                        <li class="page-li">
-                            <a href="">2</a>
-                        </li>
-                        <li class="page-li">
-                            <a href="">3</a>
-                        </li>
-                        <li class="page-li">
-                            <a href="">4</a>
-                        </li>
-                        <li class="page-li">
-                            <a href="">5</a>
-                        </li>
-                        <li class="page-arrow">
-                            <div class="arrow">
-                                <svg viewBox="0 0 48 48"><path fill-rule="evenodd" clip-rule="evenodd" d="M13.9071 46C13.4118 46 12.9164 45.8001 12.6192 45.4003C11.9257 44.7007 11.9257 43.5014 12.6192 42.7019L30.8493 24.0125L12.5201 5.22317C11.8266 4.52357 11.8266 3.32425 12.5201 2.5247C13.2136 1.8251 14.3034 1.8251 15.096 2.5247L36 24.0125L15.195 45.4003C14.7988 45.8001 14.3034 46 13.9071 46Z"></path></svg>
+                        </div>
+                        <div class="show-answer-wrap">
+                            <div class="support-request-title-wrap">
+                                <div class="support-request-title">보아뱀 닮아버린</div>
                             </div>
-                        </li>
-                    </ul>
-                </div>
+                            <div class="support-request-content">반 페르시 부합해 루시퍼 베드신 발포해 리스폰 페스시아 완패를 시켜</div>
+                            <div class="support-request-reply">공양미 100석 후원</div>
+                        </div>
+                    </div>
+
+
+                    <div class="page-wrap">
+                        <ul class="page-ul">
+                            <li class="page-arrow">
+                                <div class="arrow">
+                                    <svg viewBox="0 0 48 48"><path fill-rule="evenodd" clip-rule="evenodd" d="M32.8912 45.3014L12 23.913L32.8912 2.52471C33.5866 1.8251 34.7804 1.8251 35.4777 2.52471C36.1741 3.22333 36.1741 4.42368 35.4777 5.22224L17.1731 23.913L35.4777 42.7018C36.1741 43.4024 36.1741 44.6018 35.4777 45.4013C35.0788 45.8011 34.6819 46 34.1845 46C33.7855 45.9011 33.2881 45.7002 32.8912 45.3014Z"></path></svg>
+                                </div>
+                            </li>
+                            <li class="page-li-select">
+                                <a href="">1</a>
+                            </li>
+                            <li class="page-li">
+                                <a href="">2</a>
+                            </li>
+                            <li class="page-li">
+                                <a href="">3</a>
+                            </li>
+                            <li class="page-li">
+                                <a href="">4</a>
+                            </li>
+                            <li class="page-li">
+                                <a href="">5</a>
+                            </li>
+                            <li class="page-arrow">
+                                <div class="arrow">
+                                    <svg viewBox="0 0 48 48"><path fill-rule="evenodd" clip-rule="evenodd" d="M13.9071 46C13.4118 46 12.9164 45.8001 12.6192 45.4003C11.9257 44.7007 11.9257 43.5014 12.6192 42.7019L30.8493 24.0125L12.5201 5.22317C11.8266 4.52357 11.8266 3.32425 12.5201 2.5247C13.2136 1.8251 14.3034 1.8251 15.096 2.5247L36 24.0125L15.195 45.4003C14.7988 45.8001 14.3034 46 13.9071 46Z"></path></svg>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
             </div>
         </div>
 
@@ -228,6 +253,19 @@
                                 <span class="change-modal-btn">삭제</span>
                             </button>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="modal-wrap">
+            <div class="modal-container">
+                <div class="modal">
+                    <div class="modal-content">답변이 아직 등록되지 않았습니다.</div>
+                    <div class="modal-ok-div">
+                        <button type="button" class="modal-ok">확인</button>
                     </div>
                 </div>
             </div>
