--- a/src/main/resources/templates/mypage/rice-list.html
+++ b/src/main/resources/templates/mypage/rice-list.html
@@ -31,10 +31,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="rice-charge-input">
-                        <p>10,000원당 공양미 100석</p>
-                        <input type="text" placeholder="충전 금액을 입력하세요" style="width: 255px;">
-                    </div>
                     <div class="rice-charge-wrap">
                         <button class="rice-charge">
                             <div class="rice-charge-text">공양미 충전</div>
@@ -99,7 +95,7 @@
                         <th>현재 공양미</th>
                         <th>충전/사용 공양미</th>
                         <th>결제시간</th>
-                        <th>충전/사용 여부</th>
+                        <th>충전/사용/후원받은 공양미 여부</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -119,7 +115,7 @@
                         <td>300석</td>
                         <td>150석</td>
                         <td>2023-04-22 18:26:00</td>
-                        <td>충전</td>
+                        <td>후원받은 공양미</td>
                     </tr>
                     <tr>
                         <td>300석</td>
