--- a/src/main/resources/static/css/mypage/rice-charge.css
+++ b/src/main/resources/static/css/mypage/rice-charge.css
@@ -9,7 +9,7 @@ button {
 
 .rice-charge-container {
     width: 1080px;
-    margin: 0 auto;
+    margin: 50px auto;
 }
 
 .rice-charge-container ul {
