--- a/src/main/resources/templates/mypage/my-question.html
+++ b/src/main/resources/templates/mypage/my-question.html
@@ -107,11 +107,11 @@
                                             <div class="detail-text">상세보기</div>
                                         </span>
                                     </button>
-                                    <button class="show-answer">
+                                    <!-- <button class="show-answer">
                                         <span class="request-detail">
                                             <div class="detail-text">답변확인</div>
                                         </span>
-                                    </button>
+                                    </button> -->
                                 </div>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                             <div class="support-request-title-wrap">
                                 <div class="support-request-title">보아뱀 닮아버린</div>
                             </div>
-                            <div class="support-request-content">반 페르시 부합해 루시퍼 베드신 발포해 리스폰 페스시아 완패를 시켜</div>
+                            <div class="support-request-content">반 페르시 부합해 루시퍼 베드신 발포해 리스폰 페스시아 완패를 지켜</div>
                             <div class="support-request-reply">공양미 100석 후원</div>
                         </div>
                     </div>
@@ -134,11 +134,11 @@
                                     <div class="support-request-reply">공양미 100석 후원</div>
                                 </div>
                                 <div class="support-request-detail">
-                                    <button class="go-support-request">
+                                    <!-- <button class="go-support-request">
                                         <span class="request-detail">
                                             <div class="detail-text">상세보기</div>
                                         </span>
-                                    </button>
+                                    </button> -->
                                     <button class="show-answer">
                                         <span class="request-detail">
                                             <div class="detail-text">답변확인</div>
@@ -151,7 +151,39 @@
                             <div class="support-request-title-wrap">
                                 <div class="support-request-title">보아뱀 닮아버린</div>
                             </div>
-                            <div class="support-request-content">반 페르시 부합해 루시퍼 베드신 발포해 리스폰 페스시아 완패를 시켜</div>
+                            <div class="support-request-content">반 페르시 부합해 루시퍼 베드신 발포해 리스폰 페스시아 완패를 켜</div>
+                            <div class="support-request-reply">공양미 100석 후원</div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="support-request-one-wrap">
+                            <div class="support-request">
+                                <div class="support-request-place">
+                                    <div class="support-request-title-wrap">
+                                        <div class="support-request-title">높이 올라가</div>
+                                    </div>
+                                    <div class="support-request-content">세상을 다 가져봐</div>
+                                    <div class="support-request-reply">공양미 100석 후원</div>
+                                </div>
+                                <div class="support-request-detail">
+                                    <!-- <button class="go-support-request">
+                                        <span class="request-detail">
+                                            <div class="detail-text">상세보기</div>
+                                        </span>
+                                    </button> -->
+                                    <button class="show-answer">
+                                        <span class="request-detail">
+                                            <div class="detail-text">답변확인</div>
+                                        </span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="show-answer-wrap">
+                            <div class="support-request-title-wrap">
+                                <div class="support-request-title">보아뱀 닮아버린</div>
+                            </div>
+                            <div class="support-request-content">반 페르시 부합해 루시퍼 베드신 발포해 리스폰 페스시아 완패를 켜</div>
                             <div class="support-request-reply">공양미 100석 후원</div>
                         </div>
                     </div>
@@ -263,9 +295,10 @@
         <div class="modal-wrap">
             <div class="modal-container">
                 <div class="modal">
-                    <div class="modal-content">답변이 아직 등록되지 않았습니다.</div>
+                    <div class="modal-content">정말로 삭제하시겠습니까?</div>
                     <div class="modal-ok-div">
-                        <button type="button" class="modal-ok">확인</button>
+                        <button type="button" class="modal-button modal-ok">확인</button>
+                        <button type="button" class="modal-button modal-cancel">취소</button>
                     </div>
                 </div>
             </div>
