--- a/src/main/resources/templates/mypage/rice-list.html
+++ b/src/main/resources/templates/mypage/rice-list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>공양미 충전</title>
+    <title>공양미 내역</title>
     <link rel="stylesheet" href="../../static/css/font/font.css">
     <link rel="stylesheet" href="../../static/css/main/header.css">
     <link rel="stylesheet" href="../../static/css/mypage/mypage-header.css">
